updates the runbook